# HW-27

./: db.sqlite3  manage.py  pyproject.toml  readmi
ads/: ad_urls.py  ad_views.py  admin.py  cat_urls.py  media_urls.py  models.py  permissions.py  user_urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_is_published.py  0002_user_profile.py  0003_location_user_remove_ad_address_ad_author_id_and_more.py  0004_alter_user_location_id.py  0005_alter_ad_options_alter_category_options_and_more.py  0006_ad_image_alter_ad_price_alter_location_ing_and_more.py  0007_remove_ad_image_alter_location_ing_and_more.py  0008_alter_ad_price_alter_category_name_and_more.py  0009_media.py  0010_delete_media.py  0011_media.py  0012_ad_image_id_alter_ad_author_id.py  0013_remove_ad_image_id_ad_image.py  0014_alter_ad_image.py  0015_remove_ad_author_id_remove_ad_category_id_and_more.py  0016_remove_ad_author_instance_remove_ad_category_and_more.py  0017_rename_ing_location_lng.py  0018_rename_location_id_user_location.py  0019_remove_ad_author_id_alter_ad_author.py  0020_rename_category_id_ad_category.py  0021_delete_media.py  0022_alter_ad_is_published_remove_user_location_and_more.py  0023_rename_location_user_locations.py  0024_remove_user_locations_user_locations.py  0025_rename_locations_user_location.py  0026_remove_user_location_user_locations.py  0027_remove_user_locations_user_location.py  (+5 more)
ads/serializers/: ad_serializer.py  (+3 more)
authentication/: models.py  serizlizers.py  urls.py  views.py
hm_27_1/: asgi.py  settings.py  urls.py  wsgi.py
old/: location_views.py
(+16 files in other folders)
