[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["artilerist47 <artilerist.sorok.sedmoi@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2 = "^2.9.5"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
